--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
 
       <section class="landing-page">
 
+        <div class="landing-page-bg">
+          <div class="landing-page-bg-title">Home</div>
+          <div class="landing-page-bg-border"></div>
+        </div>
+
         <div class="landing-name-holder">
           <div class="primary letters">
             <div class="first-name">
@@ -116,7 +121,17 @@
         <div class="ph-bg"></div>
       </div>
 
+      <div class="projects-header1">
+        Projects
+      </div>
+
       <section class="projects-container">
+        <div class="projects-border-bg">
+          <div class="border-left-reveal"></div>
+          <div class="border-bottom-reveal"></div>
+        </div>
+        <div class="projects-bg"></div>
+        <div class="projects-bg-reveal"></div>
         <div class="project-one-container collapse">
           <div class="project-thumbnail">
             <div class="project-buttons-container soc">
@@ -126,7 +141,7 @@
               <a href="https://github.com/Blalexander/Destiny-2-Server/" target="_blank" class="project-buttons view-server-code">VIEW SERVER CODE</a>
             </div>
             <div class="thumbnail-image">
-              <img class="img-to-move0" src="/screenshots/dmtfinalandingfix.png" alt="Destiny MetaTrends">
+              <img class="img-to-move0" src="/screenshots/dmtbg2.png" alt="Destiny MetaTrends">
             </div>
           </div>
           <!-- <div class="project-outline"></div> -->
@@ -159,7 +174,7 @@
               <a href="https://github.com/Blalexander/Flexbox-Sandbox/" target="_blank" class="project-buttons view-code">VIEW CODE</a>
             </form>
             <div class="thumbnail-image">
-              <img class="img-to-move1" src="/screenshots/flexboxsandboxfix.png" alt="Destiny MetaTrends">
+              <img class="img-to-move1" src="/screenshots/fbsbbg2.png" alt="Destiny MetaTrends">
             </div>
           </div>
           <!-- <div class="project-outline"></div> -->
@@ -189,7 +204,7 @@
               <a href="https://github.com/Blalexander/TakeMeThere/" target="_blank" class="project-buttons view-code">VIEW CODE</a>
             </form>
             <div class="thumbnail-image">
-              <img class="img-to-move2" src="/screenshots/takemetherefix.png" alt="Destiny MetaTrends">
+              <img class="img-to-move2" src="/screenshots/tmtbg2.png" alt="Destiny MetaTrends">
             </div>
           </div>
           <!-- <div class="project-outline"></div> -->
@@ -221,13 +236,19 @@
 
       <div class="about-me-header">
         <h2 class="about-me-label">About me</h2>
+        <div class="about-me-label-border"></div>
+        <div class="about-me-label-reveal"></div>
       </div>
 
       <section class="about-me-container">
         <!-- <div class="background-border"> -->
           <!-- <div class="background-border-reveal"></div> -->
-          <div class="background-fade-left"></div>
-          <div class="background-fade-right"></div>
+          <div class="about-me-reveal-plates">
+            <div class="am-plate plate1"></div>
+            <div class="am-plate plate2"></div>
+            <div class="am-plate plate3"></div>
+            <div class="am-plate plate4"></div>
+          </div>
           <div class="about-me-body">
           <div class="am-body-content">
             <p class="am-sentence">I am a full stack web developer based out of Los Angeles.</p>  
@@ -315,6 +336,7 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
