--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
       </div>
     </section>
 
+    <div class="moving-bg">
+      <div class="color-change"></div>
+    </div>
+
     <main>
 
       <section class="landing-page">
