big style update

--- a/index.html
+++ b/index.html
@@ -40,8 +40,13 @@
       <section class="landing-page"> 
 
         <div class="landing-page-bg"> 
-          <div class="landing-page-bg-title">Home</div>
-          <div class="landing-page-bg-border"></div>
+        </div>
+
+        <div class="landing-page-centerpiece">
+          <div class="centerpiece-container"></div>
+          <div class="centerpiece-border"></div>
+          <div class="second-cp"></div>
+          <div class="third-cp"></div>
         </div>
 
         <div class="landing-name-holder">
@@ -88,10 +93,10 @@
         </div>
 
         <div class="landing-title">
-          <div class="lt lt1">FULL</div>
-          <div class="lt lt2">STACK</div>
-          <div class="lt lt3">WEB</div>
-          <div class="lt lt4">DEVELOPER</div>
+          <div class="lt lt1">Full</div>
+          <div class="lt lt2">Stack</div>
+          <div class="lt lt3">Web</div>
+          <div class="lt lt4">Developer</div>
         </div>
 <!-- 
         <div class="scroll-down">
@@ -126,7 +131,11 @@
       </div>
 
       <div class="projects-header1">
-        Projects
+        <div class="ph-box">
+          <p class="projects-header-text">Projects</p>
+        </div>
+        <div class="second-ph"></div>
+        <div class="third-ph"></div>
       </div>
 
       <section class="projects-container">
@@ -137,6 +146,7 @@
         <div class="projects-bg"></div>
         <div class="projects-bg-reveal"></div>
         <div class="project-one-container collapse">
+          <div class="project-bg-box box0"></div>
           <div class="project-thumbnail">
             <div class="project-buttons-container soc">
               <a href="https://destinymetatrends.azurewebsites.net/" target="_blank" class="project-buttons view-project">VIEW PROJECT</a>
@@ -172,13 +182,14 @@
         </div>
 
         <div class="project-two-container collapse">
+          <div class="project-bg-box box1"></div>
           <div class="project-thumbnail">
             <form class="project-buttons-container moc">
               <a href="https://flexboxsandbox.herokuapp.com/sandbox.html" target="_blank" class="project-buttons view-project">VIEW PROJECT</a>
               <a href="https://github.com/Blalexander/Flexbox-Sandbox/" target="_blank" class="project-buttons view-code">VIEW CODE</a>
             </form>
             <div class="thumbnail-image">
-              <img class="img-to-move1" src="/screenshots/fbsbbg2.png" alt="Destiny MetaTrends">
+              <img class="img-to-move1" src="/screenshots/fbsbbg3.png" alt="Flexbox Sandbox">
             </div>
           </div>
           <!-- <div class="project-outline"></div> -->
@@ -202,13 +213,14 @@
         </div>
 
         <div class="project-three-container collapse">
+          <div class="project-bg-box box2"></div>
           <div class="project-thumbnail">
             <form class="project-buttons-container moc">
               <a href="https://blalexander.github.io/TakeMeThere/" target="_blank" class="project-buttons view-project">VIEW PROJECT</a>
               <a href="https://github.com/Blalexander/TakeMeThere/" target="_blank" class="project-buttons view-code">VIEW CODE</a>
             </form>
             <div class="thumbnail-image">
-              <img class="img-to-move2" src="/screenshots/tmtbg2.png" alt="Destiny MetaTrends">
+              <img class="img-to-move2" src="/screenshots/tmtbg2.png" alt="Take Me There">
             </div>
           </div>
           <!-- <div class="project-outline"></div> -->
@@ -238,21 +250,14 @@
         </div>
       </section>
 
+      <div class="top-shard"></div>
+      <div class="bottom-shard"></div>
+
       <div class="about-me-header">
-        <h2 class="about-me-label">About me</h2>
-        <div class="about-me-label-border"></div>
-        <div class="about-me-label-reveal"></div>
+        <div class="about-me-label"><span class="highlighted">About</span> <span class="lowlighted">me</span></div>
       </div>
 
       <section class="about-me-container">
-        <!-- <div class="background-border"> -->
-          <!-- <div class="background-border-reveal"></div> -->
-          <div class="about-me-reveal-plates">
-            <div class="am-plate plate1"></div>
-            <div class="am-plate plate2"></div>
-            <div class="am-plate plate3"></div>
-            <div class="am-plate plate4"></div>
-          </div>
           <div class="about-me-body">
           <div class="am-body-content">
             <p class="am-sentence">I am a full stack web developer based out of Los Angeles.</p>  
@@ -261,12 +266,17 @@
             <p class="am-sentence">Few things are more rewarding than being faced with a challenging idea, growing to overcome the challenge, and representing the idea in its best form.</p>
           </div>
           </div>
-        <!-- </div> -->
       </section>
 
       <section class="contact-section">
         <div class="about-me-trigger"></div>
         <div class="background-gradient"></div>
+        <div class="contact-me-reveal-plates">
+          <div class="cm-plate plate1"></div>
+          <div class="cm-plate plate2"></div>
+          <div class="cm-plate plate3"></div>
+          <div class="cm-plate plate4"></div>
+        </div>
         <div class="lets-talk-container">
           <div class="lets-talk-primary-letters">
             <h2 class="lets-talk-letter ltp">L</h2>
