--- a/index.html
+++ b/index.html
@@ -108,6 +108,10 @@
           </div>
           <div class="line line5"></div>
         </div> -->
+
+        <div class="box box1"></div>
+        <div class="box box2"></div>
+        <div class="box box3"></div>
       </section>
 
       <div class="projects-header">
