--- a/index.html
+++ b/index.html
@@ -109,9 +109,6 @@
           <div class="line line5"></div>
         </div> -->
 
-        <div class="box box1"></div>
-        <div class="box box2"></div>
-        <div class="box box3"></div>
       </section>
 
       <div class="projects-header">
@@ -317,6 +314,7 @@
       </section>
     </main>
     
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/ScrollTrigger.min.js"></script>
     <script src="script.js"></script>
