project container revamp

--- a/index.html
+++ b/index.html
@@ -85,41 +85,22 @@
           <div class="lt lt3">WEB</div>
           <div class="lt lt4">DEVELOPER</div>
         </div>
-<!-- 
-        <div class="scroll-down">
-          <div class="sd-arrow">
-            <svg class="svg-arrow" width="18" height="152" viewBox="0 0 18 152" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <line class="arrow-line1" x1="8.75" y1="75" x2="8.75" y2="100" stroke="white" stroke-width="2"/>
-              <line class="arrow-line2" x1="8.75" y1="100" x2="8.75" y2="125" stroke="white" stroke-width="2"/>
-              <line class="arrow-line3" x1="8.75" y1="125" x2="8.75" y2="150" stroke="white" stroke-width="2"/>
-              <line x1="1.41421" y1="143" x2="8.48528" y2="150.071" stroke="white" stroke-width="2" stroke-linecap="round"/>
-              <line x1="9" y1="150.071" x2="16.0711" y2="143" stroke="white" stroke-width="2" stroke-linecap="round"/>
-            </svg>             
-          </div>
-        </div> -->
-<!-- 
-        <div class="line-container upper-lines">
-          <div class="line line1"></div>
-          <div class="line line2"></div>
-          <div class="line line3"></div>
-          <div class="line line4">
-            <svg class="svg-triangle" height="210" width="500" fill="transparent">
-              <polygon class="polygon-triangle" points="200,10 250,190 160,210" stroke-width="2" stroke="red"  fill="transparent"/>
-            </svg> 
-          </div>
-          <div class="line line5"></div>
-        </div> -->
 
       </section>
 
       <div class="projects-header">
-        <h2 class="ph-text1">Projects Projects Projects Projects Projects Projects</h2>
-        <h2 class="ph-text2">Projects Projects Projects Projects Projects Projects</h2>
-        <div class="ph-bg"></div>
-      </div>
-
-      <div class="projects-header1">
-        <div class="ph-text">PROJECTS</div>
+        <div class="ph-inner">
+          <div class="ph-text">
+            <div class="phl">P</div>
+            <div class="phl">R</div>
+            <div class="phl">O</div>
+            <div class="phl">J</div>
+            <div class="phl">E</div>
+            <div class="phl">C</div>
+            <div class="phl">T</div>
+            <div class="phl">S</div>
+          </div>
+        </div>
       </div>
 
       <section class="projects-container">
@@ -127,7 +108,6 @@
           <div class="project-thumbnail proj1-thumbnail">
             <div class="project-buttons-container soc">
               <a href="https://destinymetatrends.azurewebsites.net/" target="_blank" class="project-buttons view-project">VIEW PROJECT</a>
-              <!-- <button class="project-buttons view-project">VIEW PROJECT</button> -->
               <a href="https://github.com/Blalexander/Destiny2-MetaTrends/" target="_blank" class="project-buttons view-code">VIEW CODE</a>
               <a href="https://github.com/Blalexander/Destiny-2-Server/" target="_blank" class="project-buttons view-server-code">VIEW SERVER CODE</a>
             </div>
@@ -135,8 +115,6 @@
               <img class="img-to-move0" src="/screenshots/dmtbg1.png" alt="Destiny MetaTrends">
             </div>
           </div>
-          <!-- <div class="project-outline"></div> -->
-          <!-- <div class="project-content"> -->
             <div class="project-technologies proj1-tech">
               <svg class="tech-icon" viewbox="0 0 128 128" data-name="js">
                 <path fill="#e50909" d="M2 1v125h125v-125h-125zm66.119 106.513c-1.845 3.749-5.367 6.212-9.448 7.401-6.271 1.44-12.269.619-16.731-2.059-2.986-1.832-5.318-4.652-6.901-7.901l9.52-5.83c.083.035.333.487.667 1.071 1.214 2.034 2.261 3.474 4.319 4.485 2.022.69 6.461 1.131 8.175-2.427 1.047-1.81.714-7.628.714-14.065-.001-10.115.046-20.188.046-30.188h11.709c0 11 .06 21.418 0 32.152.025 6.58.596 12.446-2.07 17.361zm48.574-3.308c-4.07 13.922-26.762 14.374-35.83 5.176-1.916-2.165-3.117-3.296-4.26-5.795 4.819-2.772 4.819-2.772 9.508-5.485 2.547 3.915 4.902 6.068 9.139 6.949 5.748.702 11.531-1.273 10.234-7.378-1.333-4.986-11.77-6.199-18.873-11.531-7.211-4.843-8.901-16.611-2.975-23.335 1.975-2.487 5.343-4.343 8.877-5.235l3.688-.477c7.081-.143 11.507 1.727 14.756 5.355.904.916 1.642 1.904 3.022 4.045-3.772 2.404-3.76 2.381-9.163 5.879-1.154-2.486-3.069-4.046-5.093-4.724-3.142-.952-7.104.083-7.926 3.403-.285 1.023-.226 1.975.227 3.665 1.273 2.903 5.545 4.165 9.377 5.926 11.031 4.474 14.756 9.271 15.672 14.981.882 4.916-.213 8.105-.38 8.581z"></path>
@@ -155,7 +133,6 @@
             <h2 class="project-title proj1-title">Destiny MetaTrends</h2>
             <h3 class="project-details moc">DETAILS: </h3>
             <p class="project-description proj1-description">Destiny MetaTrends is a data parsing tool for Destiny 2 that provides both item information directly from Bungie's database and statistics from players that use those items.</p>
-          <!-- </div> -->
         </div>
 
         <div class="project-two-container collapse">
@@ -168,8 +145,6 @@
               <img class="img-to-move1" src="/screenshots/fbsbbg1.png" alt="Destiny MetaTrends">
             </div>
           </div>
-          <!-- <div class="project-outline"></div> -->
-          <!-- <div class="project-content"> -->
             <div class="project-technologies proj2-tech">
               <svg class="tech-icon" viewbox="0 0 128 128" data-name="js">
                 <path fill="#e50909" d="M2 1v125h125v-125h-125zm66.119 106.513c-1.845 3.749-5.367 6.212-9.448 7.401-6.271 1.44-12.269.619-16.731-2.059-2.986-1.832-5.318-4.652-6.901-7.901l9.52-5.83c.083.035.333.487.667 1.071 1.214 2.034 2.261 3.474 4.319 4.485 2.022.69 6.461 1.131 8.175-2.427 1.047-1.81.714-7.628.714-14.065-.001-10.115.046-20.188.046-30.188h11.709c0 11 .06 21.418 0 32.152.025 6.58.596 12.446-2.07 17.361zm48.574-3.308c-4.07 13.922-26.762 14.374-35.83 5.176-1.916-2.165-3.117-3.296-4.26-5.795 4.819-2.772 4.819-2.772 9.508-5.485 2.547 3.915 4.902 6.068 9.139 6.949 5.748.702 11.531-1.273 10.234-7.378-1.333-4.986-11.77-6.199-18.873-11.531-7.211-4.843-8.901-16.611-2.975-23.335 1.975-2.487 5.343-4.343 8.877-5.235l3.688-.477c7.081-.143 11.507 1.727 14.756 5.355.904.916 1.642 1.904 3.022 4.045-3.772 2.404-3.76 2.381-9.163 5.879-1.154-2.486-3.069-4.046-5.093-4.724-3.142-.952-7.104.083-7.926 3.403-.285 1.023-.226 1.975.227 3.665 1.273 2.903 5.545 4.165 9.377 5.926 11.031 4.474 14.756 9.271 15.672 14.981.882 4.916-.213 8.105-.38 8.581z"></path>
@@ -185,7 +160,6 @@
             <h2 class="project-title proj2-title">Flexbox Sandbox</h2>
             <h3 class="project-details moc">DETAILS: </h3>
             <p class="project-description proj2-description">An educational web app that allows users to hone their Flexbox skills by completing randomly generated puzzles.</p>
-          <!-- </div> -->
         </div>
 
         <div class="project-three-container collapse">
@@ -198,8 +172,6 @@
               <img class="img-to-move2" src="/screenshots/tmtbg1.png" alt="Destiny MetaTrends">
             </div>
           </div>
-          <!-- <div class="project-outline"></div> -->
-          <!-- <div class="project-content"> -->
             <div class="project-technologies proj3-tech">
               <svg class="tech-icon" viewbox="0 0 128 128" data-name="js">
                 <path fill="#e50909" d="M2 1v125h125v-125h-125zm66.119 106.513c-1.845 3.749-5.367 6.212-9.448 7.401-6.271 1.44-12.269.619-16.731-2.059-2.986-1.832-5.318-4.652-6.901-7.901l9.52-5.83c.083.035.333.487.667 1.071 1.214 2.034 2.261 3.474 4.319 4.485 2.022.69 6.461 1.131 8.175-2.427 1.047-1.81.714-7.628.714-14.065-.001-10.115.046-20.188.046-30.188h11.709c0 11 .06 21.418 0 32.152.025 6.58.596 12.446-2.07 17.361zm48.574-3.308c-4.07 13.922-26.762 14.374-35.83 5.176-1.916-2.165-3.117-3.296-4.26-5.795 4.819-2.772 4.819-2.772 9.508-5.485 2.547 3.915 4.902 6.068 9.139 6.949 5.748.702 11.531-1.273 10.234-7.378-1.333-4.986-11.77-6.199-18.873-11.531-7.211-4.843-8.901-16.611-2.975-23.335 1.975-2.487 5.343-4.343 8.877-5.235l3.688-.477c7.081-.143 11.507 1.727 14.756 5.355.904.916 1.642 1.904 3.022 4.045-3.772 2.404-3.76 2.381-9.163 5.879-1.154-2.486-3.069-4.046-5.093-4.724-3.142-.952-7.104.083-7.926 3.403-.285 1.023-.226 1.975.227 3.665 1.273 2.903 5.545 4.165 9.377 5.926 11.031 4.474 14.756 9.271 15.672 14.981.882 4.916-.213 8.105-.38 8.581z"></path>
@@ -221,7 +193,6 @@
             <h2 class="project-title proj3-title">Take Me There</h2>
             <h3 class="project-details moc">DETAILS: </h3>
             <p class="project-description proj3-description">Take Me There accesses the databases of Google, Wikipedia, and Bing News Search to retrieve a well-rounded breadth of information for any location searched.</p>
-          <!-- </div> -->
         </div>
       </section>
 
@@ -230,8 +201,6 @@
       </div>
 
       <section class="about-me-container">
-        <!-- <div class="background-border"> -->
-          <!-- <div class="background-border-reveal"></div> -->
           <div class="background-fade-left"></div>
           <div class="background-fade-right"></div>
           <div class="about-me-body">
@@ -242,7 +211,6 @@
             <p class="am-sentence">Few things are more rewarding than being faced with a challenging idea, growing to overcome the challenge, and representing the idea in its best form.</p>
           </div>
           </div>
-        <!-- </div> -->
       </section>
   </main>
 
@@ -288,7 +256,6 @@
             </div>
             <div class="contact-sect-work qq">
               <div class="my-work">My work:</div>
-              <!-- <a class="work-link">work</a> -->
               <div class="work">
                 <a class="gh-link" href="https://github.com/Blalexander" target="_blank">
                   <i class="fab fa-github-square" style="color:white"></i>
@@ -314,7 +281,6 @@
           </div>
         </div>
       </section>
-    <!-- </main> -->
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/gsap.min.js"></script>
