--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
       </div>
     </section>
 
+    <div class="lp-bg"></div>
+
     <main>
 
       <section class="landing-page">
-        <div class="lp-bg"></div>
+        <!-- <div class="lp-bg"></div> -->
 
         <div class="landing-name-holder">
           <div class="primary letters">
@@ -129,9 +131,7 @@
                 <path fill="#e50909" d="M112.678 30.334l-44.143-25.605c-2.781-1.584-6.424-1.584-9.227 0l-44.488 25.605c-2.869 1.651-4.82 4.754-4.82 8.073v51.142c0 3.319 1.992 6.423 4.862 8.083l11.729 6.688c5.627 2.772 7.186 2.772 9.746 2.772 8.334 0 12.662-5.039 12.662-13.828v-50.49c.001-.713.446-1.774-.255-1.774h-5.622c-.712 0-2.122 1.061-2.122 1.773v50.49c0 3.896-3.616 7.773-10.202 4.48l-12.122-7.013c-.422-.23-.676-.693-.676-1.181v-51.142c0-.482.463-.966.891-1.213l44.378-25.561c.415-.235 1.002-.235 1.415 0l43.963 25.555c.421.253.354.722.354 1.219v51.142c0 .488.092.963-.323 1.198l-44.133 25.576c-.378.227-.87.227-1.285 0l-11.317-6.749c-.341-.198-.752-.269-1.08-.086-3.145 1.783-3.729 2.02-6.679 3.043-.727.253-1.799.692.408 1.929l14.798 8.754c1.416.82 3.027 1.246 4.647 1.246 1.642 0 3.249-.426 4.666-1.246l43.976-25.582c2.871-1.672 4.322-4.764 4.322-8.083v-51.142c-.001-3.319-1.452-6.414-4.323-8.073zM77.727 81.445c-11.727 0-14.309-3.235-15.17-9.066-.102-.628-.634-1.379-1.274-1.379h-5.73c-.709 0-1.28.86-1.28 1.566 0 7.466 4.06 16.512 23.454 16.512 14.038 0 22.088-5.455 22.088-15.109 0-9.572-6.467-12.084-20.082-13.886-13.762-1.819-15.16-2.738-15.16-5.962 0-2.658 1.184-6.203 11.374-6.203 9.104 0 12.46 1.954 13.841 8.091.119.577.646.991 1.241.991h5.754c.354 0 .691-.143.939-.396.241-.272.367-.613.336-.979-.893-10.569-7.913-15.494-22.112-15.494-12.632 0-20.166 5.334-20.166 14.275 0 9.698 7.497 12.378 19.622 13.577 14.505 1.422 15.633 3.542 15.633 6.395 0 4.956-3.978 7.067-13.308 7.067z"></path>   
               </svg>
             </div>
-            <h3 class="project-heading moc">PROJECT: </h3>
             <h2 class="project-title proj1-title">Destiny MetaTrends</h2>
-            <h3 class="project-details moc">DETAILS: </h3>
             <p class="project-description proj1-description">Destiny MetaTrends is a data parsing tool for Destiny 2 that provides both item information directly from Bungie's database and statistics from players that use those items.</p>
         </div>
 
@@ -156,9 +156,7 @@
                 <path fill="#e50909" d="M112.678 30.334l-44.143-25.605c-2.781-1.584-6.424-1.584-9.227 0l-44.488 25.605c-2.869 1.651-4.82 4.754-4.82 8.073v51.142c0 3.319 1.992 6.423 4.862 8.083l11.729 6.688c5.627 2.772 7.186 2.772 9.746 2.772 8.334 0 12.662-5.039 12.662-13.828v-50.49c.001-.713.446-1.774-.255-1.774h-5.622c-.712 0-2.122 1.061-2.122 1.773v50.49c0 3.896-3.616 7.773-10.202 4.48l-12.122-7.013c-.422-.23-.676-.693-.676-1.181v-51.142c0-.482.463-.966.891-1.213l44.378-25.561c.415-.235 1.002-.235 1.415 0l43.963 25.555c.421.253.354.722.354 1.219v51.142c0 .488.092.963-.323 1.198l-44.133 25.576c-.378.227-.87.227-1.285 0l-11.317-6.749c-.341-.198-.752-.269-1.08-.086-3.145 1.783-3.729 2.02-6.679 3.043-.727.253-1.799.692.408 1.929l14.798 8.754c1.416.82 3.027 1.246 4.647 1.246 1.642 0 3.249-.426 4.666-1.246l43.976-25.582c2.871-1.672 4.322-4.764 4.322-8.083v-51.142c-.001-3.319-1.452-6.414-4.323-8.073zM77.727 81.445c-11.727 0-14.309-3.235-15.17-9.066-.102-.628-.634-1.379-1.274-1.379h-5.73c-.709 0-1.28.86-1.28 1.566 0 7.466 4.06 16.512 23.454 16.512 14.038 0 22.088-5.455 22.088-15.109 0-9.572-6.467-12.084-20.082-13.886-13.762-1.819-15.16-2.738-15.16-5.962 0-2.658 1.184-6.203 11.374-6.203 9.104 0 12.46 1.954 13.841 8.091.119.577.646.991 1.241.991h5.754c.354 0 .691-.143.939-.396.241-.272.367-.613.336-.979-.893-10.569-7.913-15.494-22.112-15.494-12.632 0-20.166 5.334-20.166 14.275 0 9.698 7.497 12.378 19.622 13.577 14.505 1.422 15.633 3.542 15.633 6.395 0 4.956-3.978 7.067-13.308 7.067z"></path>   
               </svg>
             </div>
-            <h3 class="project-heading moc">PROJECT: </h3>
             <h2 class="project-title proj2-title">Flexbox Sandbox</h2>
-            <h3 class="project-details moc">DETAILS: </h3>
             <p class="project-description proj2-description">An educational web app that allows users to hone their Flexbox skills by completing randomly generated puzzles.</p>
         </div>
 
@@ -189,9 +187,7 @@
                 <path fill="#e50909" d="M8.76 1l10.055 112.883 45.118 12.58 45.244-12.626 10.063-112.837h-110.48zm89.591 25.862l-3.347 37.605.01.203-.014.467v-.004l-2.378 26.294-.262 2.336-28.36 7.844v.001l-.022.019-28.311-7.888-1.917-21.739h13.883l.985 11.054 15.386 4.17-.004.008v-.002l15.443-4.229 1.632-18.001h-32.282999999999994l-.277-3.043-.631-7.129-.331-3.828h34.748999999999995l1.264-14h-52.926l-.277-3.041-.63-7.131-.332-3.828h69.281l-.331 3.862z"></path>
               </svg>
             </div>
-            <h3 class="project-heading moc">PROJECT: </h3>
             <h2 class="project-title proj3-title">Take Me There</h2>
-            <h3 class="project-details moc">DETAILS: </h3>
             <p class="project-description proj3-description">Take Me There accesses the databases of Google, Wikipedia, and Bing News Search to retrieve a well-rounded breadth of information for any location searched.</p>
         </div>
       </section>
@@ -205,10 +201,10 @@
           <div class="background-fade-right"></div>
           <div class="about-me-body">
           <div class="am-body-content">
-            <p class="am-sentence">I am a full stack web developer based out of Los Angeles.</p>  
-            <p class="am-sentence">Growing up, I was passionate about building things that excelled in their purpose while maintaining a sense of beauty.</p>  
-            <p class="am-sentence">Over time, I have built on to that passion and honed it in the direction of software development.</p>  
-            <p class="am-sentence">Few things are more rewarding than being faced with a challenging idea, growing to overcome the challenge, and representing the idea in its best form.</p>
+            <p class="am-sentence ams1">I am a full stack web developer based out of Los Angeles.</p>  
+            <p class="am-sentence ams2">Growing up, I was passionate about building things that excelled in their purpose while maintaining a sense of beauty.</p>  
+            <p class="am-sentence ams3">Over time, I have built on to that passion and honed it in the direction of software development.</p>  
+            <p class="am-sentence ams4">Few things are more rewarding than being faced with a challenging idea, growing to overcome the challenge, and representing the idea in its best form.</p>
           </div>
           </div>
       </section>
