initial changes to landing and footer

--- a/index.html
+++ b/index.html
@@ -23,11 +23,20 @@
   <body>
 
     <section class="fixed-navbar">
+      <div class="navi navbar-name">
+        <svg class="circle-around-name" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+          <circle  cx="50" cy="50" r="50"/>
+        </svg>
+        <div class="first-letter">B</div>
+        <div class="first-part">lake</div>
+        <div class="second-letter">A</div>
+        <div class="second-part">lexander</div>
+      </div>
       <div class="nav-buttons">
-        <button class="nav-button show-home">Home</button>
-        <button class="nav-button show-projects">Projects</button>
-        <button class="nav-button show-about-me">About</button>
-        <button class="nav-button show-contact-me">Contact</button>
+        <!-- <button class="nav-button show-home">Home</button> -->
+        <button class="nav-button navi show-projects">Projects</button>
+        <button class="nav-button navi show-about-me">About</button>
+        <button class="nav-button navi show-contact-me">Contact</button>
       </div>
     </section>
 
@@ -38,7 +47,20 @@
       <section class="landing-page">
         <!-- <div class="lp-bg"></div> -->
 
-        <div class="landing-name-holder">
+        <div class="landing-introduction">
+          <div class="introduction line1">Hey,</div>
+          <div class="introduction line2">I'm</div>
+          <div class="introduction line3">Blake Alexander<span>:</span></div>
+          <div class="introduction line4">a</div>
+          <div class="introduction line5">Full</div>
+          <div class="introduction line6">Stack</div>
+          <div class="introduction line7">Web</div>
+          <div class="introduction line8">Developer</div>
+          <div class="introduction line9">based out of</div>
+          <div class="introduction line10">Los Angeles, CA.</div>
+        </div>
+
+        <!-- <div class="landing-name-holder">
           <div class="primary letters">
             <div class="first-name">
               <h1 class="letter pl">B</h1>
@@ -86,7 +108,7 @@
           <div class="lt lt2">STACK</div>
           <div class="lt lt3">WEB</div>
           <div class="lt lt4">DEVELOPER</div>
-        </div>
+        </div> -->
 
       </section>
 
