updates to landing background and projects

--- a/index.html
+++ b/index.html
@@ -34,9 +34,24 @@
       </div>
       <div class="nav-buttons">
         <!-- <button class="nav-button show-home">Home</button> -->
-        <button class="nav-button navi show-projects">Projects</button>
-        <button class="nav-button navi show-about-me">About</button>
-        <button class="nav-button navi show-contact-me">Contact</button>
+        <button class="nav-button navi show-projects">
+          <p>Projects</p>
+          <svg class="nav-svg" viewBox="0 0 200 100" xmlns="http://www.w3.org/2000/svg">
+            <rect width="200" height="100" />
+          </svg>
+        </button>
+        <button class="nav-button navi show-about-me">
+          <p>About</p>
+          <svg class="nav-svg" viewBox="0 0 200 100" xmlns="http://www.w3.org/2000/svg">
+            <rect width="200" height="100" />
+          </svg>
+        </button>
+        <button class="nav-button navi show-contact-me">
+          <p>Contact</p>
+          <svg class="nav-svg" viewBox="0 0 200 100" xmlns="http://www.w3.org/2000/svg">
+            <rect width="200" height="100" />
+          </svg>
+        </button>
       </div>
     </section>
 
@@ -116,29 +131,29 @@
         <div class="ph-inner">
           <div class="ph-text">
             <div class="phl">P</div>
-            <div class="phl">R</div>
-            <div class="phl">O</div>
-            <div class="phl">J</div>
-            <div class="phl">E</div>
-            <div class="phl">C</div>
-            <div class="phl">T</div>
-            <div class="phl">S</div>
+            <div class="phl">r</div>
+            <div class="phl">o</div>
+            <div class="phl">j</div>
+            <div class="phl">e</div>
+            <div class="phl">c</div>
+            <div class="phl">t</div>
+            <div class="phl">s</div>
           </div>
         </div>
       </div>
 
       <section class="projects-container">
-        <div class="project-one-container collapse">
+        <div class="project-one-container proj-cont collapse">
           <div class="project-thumbnail proj1-thumbnail">
-            <div class="project-buttons-container soc">
-              <a href="https://destinymetatrends.azurewebsites.net/" target="_blank" class="project-buttons view-project">VIEW PROJECT</a>
-              <a href="https://github.com/Blalexander/Destiny2-MetaTrends/" target="_blank" class="project-buttons view-code">VIEW CODE</a>
-              <a href="https://github.com/Blalexander/Destiny-2-Server/" target="_blank" class="project-buttons view-server-code">VIEW SERVER CODE</a>
-            </div>
             <div class="thumbnail-image">
               <img class="img-to-move0" src="/screenshots/dmtbg1.png" alt="Destiny MetaTrends">
             </div>
           </div>
+          <form class="project-buttons-container soc">
+            <a href="https://destinymetatrends.azurewebsites.net/" target="_blank" class="project-buttons view-project">View Project</a>
+            <a href="https://github.com/Blalexander/Destiny2-MetaTrends/" target="_blank" class="project-buttons view-code">View Code</a>
+            <a href="https://github.com/Blalexander/Destiny-2-Server/" target="_blank" class="project-buttons view-server-code">View Server Code</a>
+          </form>
             <div class="project-technologies proj1-tech">
               <svg class="tech-icon" viewbox="0 0 128 128" data-name="js">
                 <path fill="#e50909" d="M2 1v125h125v-125h-125zm66.119 106.513c-1.845 3.749-5.367 6.212-9.448 7.401-6.271 1.44-12.269.619-16.731-2.059-2.986-1.832-5.318-4.652-6.901-7.901l9.52-5.83c.083.035.333.487.667 1.071 1.214 2.034 2.261 3.474 4.319 4.485 2.022.69 6.461 1.131 8.175-2.427 1.047-1.81.714-7.628.714-14.065-.001-10.115.046-20.188.046-30.188h11.709c0 11 .06 21.418 0 32.152.025 6.58.596 12.446-2.07 17.361zm48.574-3.308c-4.07 13.922-26.762 14.374-35.83 5.176-1.916-2.165-3.117-3.296-4.26-5.795 4.819-2.772 4.819-2.772 9.508-5.485 2.547 3.915 4.902 6.068 9.139 6.949 5.748.702 11.531-1.273 10.234-7.378-1.333-4.986-11.77-6.199-18.873-11.531-7.211-4.843-8.901-16.611-2.975-23.335 1.975-2.487 5.343-4.343 8.877-5.235l3.688-.477c7.081-.143 11.507 1.727 14.756 5.355.904.916 1.642 1.904 3.022 4.045-3.772 2.404-3.76 2.381-9.163 5.879-1.154-2.486-3.069-4.046-5.093-4.724-3.142-.952-7.104.083-7.926 3.403-.285 1.023-.226 1.975.227 3.665 1.273 2.903 5.545 4.165 9.377 5.926 11.031 4.474 14.756 9.271 15.672 14.981.882 4.916-.213 8.105-.38 8.581z"></path>
@@ -157,16 +172,16 @@
             <p class="project-description proj1-description">Destiny MetaTrends is a data parsing tool for Destiny 2 that provides both item information directly from Bungie's database and statistics from players that use those items.</p>
         </div>
 
-        <div class="project-two-container collapse">
+        <div class="project-two-container proj-cont collapse">
           <div class="project-thumbnail proj2-thumbnail">
-            <form class="project-buttons-container moc">
-              <a href="https://flexboxsandbox.herokuapp.com/sandbox.html" target="_blank" class="project-buttons view-project">VIEW PROJECT</a>
-              <a href="https://github.com/Blalexander/Flexbox-Sandbox/" target="_blank" class="project-buttons view-code">VIEW CODE</a>
-            </form>
             <div class="thumbnail-image">
               <img class="img-to-move1" src="/screenshots/fbsbbg1.png" alt="Destiny MetaTrends">
             </div>
           </div>
+          <form class="project-buttons-container moc">
+            <a href="https://flexboxsandbox.herokuapp.com/sandbox.html" target="_blank" class="project-buttons view-project">View Project</a>
+            <a href="https://github.com/Blalexander/Flexbox-Sandbox/" target="_blank" class="project-buttons view-code">View Code</a>
+          </form>
             <div class="project-technologies proj2-tech">
               <svg class="tech-icon" viewbox="0 0 128 128" data-name="js">
                 <path fill="#e50909" d="M2 1v125h125v-125h-125zm66.119 106.513c-1.845 3.749-5.367 6.212-9.448 7.401-6.271 1.44-12.269.619-16.731-2.059-2.986-1.832-5.318-4.652-6.901-7.901l9.52-5.83c.083.035.333.487.667 1.071 1.214 2.034 2.261 3.474 4.319 4.485 2.022.69 6.461 1.131 8.175-2.427 1.047-1.81.714-7.628.714-14.065-.001-10.115.046-20.188.046-30.188h11.709c0 11 .06 21.418 0 32.152.025 6.58.596 12.446-2.07 17.361zm48.574-3.308c-4.07 13.922-26.762 14.374-35.83 5.176-1.916-2.165-3.117-3.296-4.26-5.795 4.819-2.772 4.819-2.772 9.508-5.485 2.547 3.915 4.902 6.068 9.139 6.949 5.748.702 11.531-1.273 10.234-7.378-1.333-4.986-11.77-6.199-18.873-11.531-7.211-4.843-8.901-16.611-2.975-23.335 1.975-2.487 5.343-4.343 8.877-5.235l3.688-.477c7.081-.143 11.507 1.727 14.756 5.355.904.916 1.642 1.904 3.022 4.045-3.772 2.404-3.76 2.381-9.163 5.879-1.154-2.486-3.069-4.046-5.093-4.724-3.142-.952-7.104.083-7.926 3.403-.285 1.023-.226 1.975.227 3.665 1.273 2.903 5.545 4.165 9.377 5.926 11.031 4.474 14.756 9.271 15.672 14.981.882 4.916-.213 8.105-.38 8.581z"></path>
@@ -182,16 +197,16 @@
             <p class="project-description proj2-description">An educational web app that allows users to hone their Flexbox skills by completing randomly generated puzzles.</p>
         </div>
 
-        <div class="project-three-container collapse">
+        <div class="project-three-container proj-cont collapse">
           <div class="project-thumbnail proj3-thumbnail">
-            <form class="project-buttons-container moc">
-              <a href="https://blalexander.github.io/TakeMeThere/" target="_blank" class="project-buttons view-project">VIEW PROJECT</a>
-              <a href="https://github.com/Blalexander/TakeMeThere/" target="_blank" class="project-buttons view-code">VIEW CODE</a>
-            </form>
             <div class="thumbnail-image">
               <img class="img-to-move2" src="/screenshots/tmtbg1.png" alt="Destiny MetaTrends">
             </div>
           </div>
+          <form class="project-buttons-container moc">
+            <a href="https://blalexander.github.io/TakeMeThere/" target="_blank" class="project-buttons view-project">View Project</a>
+            <a href="https://github.com/Blalexander/TakeMeThere/" target="_blank" class="project-buttons view-code">View Code</a>
+          </form>
             <div class="project-technologies proj3-tech">
               <svg class="tech-icon" viewbox="0 0 128 128" data-name="js">
                 <path fill="#e50909" d="M2 1v125h125v-125h-125zm66.119 106.513c-1.845 3.749-5.367 6.212-9.448 7.401-6.271 1.44-12.269.619-16.731-2.059-2.986-1.832-5.318-4.652-6.901-7.901l9.52-5.83c.083.035.333.487.667 1.071 1.214 2.034 2.261 3.474 4.319 4.485 2.022.69 6.461 1.131 8.175-2.427 1.047-1.81.714-7.628.714-14.065-.001-10.115.046-20.188.046-30.188h11.709c0 11 .06 21.418 0 32.152.025 6.58.596 12.446-2.07 17.361zm48.574-3.308c-4.07 13.922-26.762 14.374-35.83 5.176-1.916-2.165-3.117-3.296-4.26-5.795 4.819-2.772 4.819-2.772 9.508-5.485 2.547 3.915 4.902 6.068 9.139 6.949 5.748.702 11.531-1.273 10.234-7.378-1.333-4.986-11.77-6.199-18.873-11.531-7.211-4.843-8.901-16.611-2.975-23.335 1.975-2.487 5.343-4.343 8.877-5.235l3.688-.477c7.081-.143 11.507 1.727 14.756 5.355.904.916 1.642 1.904 3.022 4.045-3.772 2.404-3.76 2.381-9.163 5.879-1.154-2.486-3.069-4.046-5.093-4.724-3.142-.952-7.104.083-7.926 3.403-.285 1.023-.226 1.975.227 3.665 1.273 2.903 5.545 4.165 9.377 5.926 11.031 4.474 14.756 9.271 15.672 14.981.882 4.916-.213 8.105-.38 8.581z"></path>
