more updates, preparation for about me change

--- a/index.html
+++ b/index.html
@@ -234,15 +234,19 @@
       </div>
 
       <section class="about-me-container">
-          <div class="background-fade-left"></div>
-          <div class="background-fade-right"></div>
           <div class="about-me-body">
-          <div class="am-body-content">
-            <p class="am-sentence ams1">I am a full stack web developer based out of Los Angeles.</p>  
-            <p class="am-sentence ams2">Growing up, I was passionate about building things that excelled in their purpose while maintaining a sense of beauty.</p>  
-            <p class="am-sentence ams3">Over time, I have built on to that passion and honed it in the direction of software development.</p>  
-            <p class="am-sentence ams4">Few things are more rewarding than being faced with a challenging idea, growing to overcome the challenge, and representing the idea in its best form.</p>
-          </div>
+            <div class="am-body-content">
+              <p class="am-sentence ams1">I am a full stack web developer based out of Los Angeles.</p>   
+              <p class="am-sentence ams2">Growing up, I was passionate about building things that excelled in their purpose while maintaining a sense of beauty.</p>  
+              <p class="am-sentence ams3">Over time, I have built on to that passion and honed it in the direction of software development.</p>  
+              <p class="am-sentence ams4">Few things are more rewarding than being faced with a challenging idea, growing to overcome the challenge, and representing the idea in its best form.</p>
+            </div>
+            <div class="am-body-content-pseudo">
+              <p class="am-sentence-pseudo amsp1">I am a full stack web developer based out of Los Angeles.</p> 
+              <p class="am-sentence-pseudo amsp2">Growing up, I was passionate about building things that excelled in their purpose while maintaining a sense of beauty.</p>  
+              <p class="am-sentence-pseudo amsp3">Over time, I have built on to that passion and honed it in the direction of software development.</p>  
+              <p class="am-sentence-pseudo amsp4">Few things are more rewarding than being faced with a challenging idea, growing to overcome the challenge, and representing the idea in its best form.</p>
+            </div>
           </div>
       </section>
   </main>
