landing background and about me updates

--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
       </div>
 
       <section class="about-me-container">
+        <div class="about-me-bg"></div>
           <div class="about-me-body">
             <div class="am-body-content">
               <p class="am-sentence ams1">I am a full stack web developer based out of Los Angeles.</p>   
