--- a/index.html
+++ b/index.html
@@ -250,7 +250,6 @@
             </div>
           </div>
       </section>
-  </main>
 
       <section class="contact-section">
         <div class="about-me-trigger"></div>
@@ -281,7 +280,7 @@
             <h2 class="lets-talk-letter lts">!</h2>
           </div>
         </div>
-        <div class="contact-card-bg"></div>  
+        <!-- <div class="contact-card-bg"></div>   -->
         <div class="contact-card-outer">        
           <div class="contact-card-inner">
             <div class="contact-sect-email qq">
@@ -319,6 +318,10 @@
           </div>
         </div>
       </section>
+  </main>
+
+  <div class="contact-card-bg"></div>  
+
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/gsap.min.js"></script>
