--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One&display=swap" rel="stylesheet"> 
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet"> 
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">  -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet"> 
     <script src="https://kit.fontawesome.com/a80c6dbc29.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Lora&display=swap" rel="stylesheet"> 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
@@ -56,6 +59,8 @@
     </section>
 
     <div class="lp-bg"></div>
+
+    <div class="centerpiece-container"></div>
 
     <main>
 
@@ -128,6 +133,7 @@
       </section>
 
       <div class="projects-header">
+        <div class="top-projects-line"></div>
         <div class="ph-inner">
           <div class="ph-text">
             <div class="phl">P</div>
@@ -143,6 +149,8 @@
       </div>
 
       <section class="projects-container">
+        <div class="lines-down ld1"></div>
+        <div class="lines-down ld2"></div>
         <div class="project-one-container proj-cont collapse">
           <div class="project-thumbnail proj1-thumbnail">
             <div class="thumbnail-image">
